# caby

./: .gitlab-ci.yml  CLAUDE.md  Makefile  NOTICE.md  README.md  go.work  go.work.sum  notes.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
caby-service/: .env.example  .gitignore  Cargo.toml  README.md  go.mod  go.sum  readme.md
caby-service-go/: go.mod  go.sum
caby-service-go/cmd/caby_api/: main.go
caby-service-go/configs/: .dev.env
caby-service-go/pkg/config/: config.go  (+1 more)
caby-service-go/scripts/: run-dev.sh
caby-service/ci/: Dockerfile
caby-service/cmd/caby_api/: main.go
caby-service/configs/: .dev.env
caby-service/internal/caby_api/configs/: envs.go  load_config.go
caby-service/internal/caby_api/configs/files/: routes.go
caby-service/internal/caby_api/env/: envs.go
caby-service/internal/caby_api/v0/: routes.go
caby-service/internal/caby_api/v0/files/: handle_files.go
caby-service/pkg/config/: config.go
caby-service/pkg/env/: env.go  env_test.go
caby-service/pkg/file/: dir.go  file.go
caby-service/pkg/jsend/: jsend.go
caby-service/scripts/: run-dev.sh
caby-service/src/: config.rs  ctx.rs  error.rs  housekeeping.rs  img_thumbs.rs  init.rs  jsend.rs  main.rs  state.rs
caby-service/src/auth/: auth_middleware.rs  mod.rs
caby-service/src/auth/oidc/: flow_state.rs  mod.rs  oidc_auth_code_flow.rs  oidc_user.rs  oidc_user_names.rs  provision.rs
caby-service/src/bootstrap/: fs.rs  mod.rs  vips.rs
caby-service/src/config/: auth.rs  config_env.rs  config_file.rs  img_thumbs.rs  mod.rs  urls.rs  validate_config.rs
caby-service/src/config/auth/: mod.rs
caby-service/src/config/config_file/: config_file_user.rs  mod.rs
caby-service/src/download/: mod.rs
caby-service/src/files/: entry.rs  media.rs  media_type.rs  mod.rs  ops.rs  overview.rs  pretty.rs  upload.rs
caby-service/src/share/: mod.rs
caby-service/src/space/: mod.rs
caby-service/src/upload/: manifest.rs  mod.rs
caby-service/src/user/: mod.rs  user_activation.rs  user_init.rs
caby-service/src/validation/: mod.rs  prefabs.rs
caby-service/src/web/: headers.rs  mod.rs  routes_files.rs  upload.rs
caby-service/src/web/auth_api/: auth_info.rs  auth_login.rs  auth_logout.rs  auth_oidc_callback.rs  auth_oidc_login.rs  auth_test.rs  auth_token.rs  mod.rs
caby-service/src/web/extractors/: authorized_user.rs  download_user.rs  mod.rs  space.rs  user.rs  user_init_state.rs
caby-service/src/web/files_api/: files_delete.rs  files_download.rs  files_list.rs  files_move.rs  files_overview.rs  files_preview.rs  files_put.rs  files_thumbnail.rs  files_upload.rs  mod.rs
caby-service/src/web/spaces_api/: mod.rs
caby-service/src/web/users_api/: mod.rs
caby-web/: README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
caby-web/ci/: Dockerfile
caby-web/scripts/: run-dev.sh
caby-web/src/: app.html  styles.css
scripts/: debug-mobile-win-cleanup.bat  debug-mobile-win.bat
(+89 files in other folders)
