[package]
name = "caby-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
axum = { version = "0.8.9" }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "normalize-path"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
path-clean = "1.0.1"
mime_guess = "2.0.5"
xid = "1.1.1"
futures-util = "0.3.32"
bitcode = "0.6.9"
base64 = "0.22.1"
xxhash-rust = { version = "0.8.15", features = ["xxh64"]}
yaml-rust2 = "0.11.0"
anyhow = "1.0.102"
argon2 = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10.1"
email_address = "0.2.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
